# mjsdl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  justfile
cmake/: generated.cmake  mjhelpers.cmake  mjsdlConfig.cmake.in
cmake/packaging/: CMakeLists.txt
docexamples/: main.cpp
generator/: GPUBuffer.hpp  classes.json  gen_mjsdl.py
generator/data/: classes.json  gpu.json  render.json  surface.json  ttf.json
generator/templates/: SDLClass.jinja  fwd.hpp.jinja  generated.cmake.jinja
generator/toys/: AsyncIOQueueToys.inc  EnvironmentToys.inc  GPUBufferToys.inc  GPUDeviceToys.inc  GPURenderStateToys.inc  GPUTransferBufferToys.inc  RendererToys.inc  TTFFontToys.inc
include/mjsdl/: AsyncIOQueue.hpp  AudioStream.hpp  Cursor.hpp  Environment.hpp  Font.hpp  GPUBuffer.hpp  GPUComputePipeline.hpp  GPUDevice.hpp  GPUGraphicsPipeline.hpp  GPURenderState.hpp  GPUSampler.hpp  GPUShader.hpp  GPUTexture.hpp  GPUTransferBuffer.hpp  Renderer.hpp  RendererTextEngine.hpp  Surface.hpp  Text.hpp  Texture.hpp  Window.hpp  compat.hpp  files.hpp  fwd.hpp  generated.hpp  guard.hpp  memory.hpp  mjsdl.hpp
testharness/: main.cpp
